Thu Feb 01 20:10:55 2001  George Lebl <jirka@5z.com>

	* panel_config.c:  How did this ever build for me before, fix
	  typos

Wed Jan 31 00:06:50 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch]: keep a flag around to see if we are updating the
	  panel ourselves, in which case do not update ourselves.

Wed Jan 31 03:03:40 2001  George Lebl <jirka@5z.com>

	* panel-util.c:  Fix setting of background colors in different
	  themes.  So that changing themes effects things.

	* doc/Makefile.am, doc/panel.sgml:  Fix build problem.

Tue Jan 30 22:30:26 2001  George Lebl <jirka@5z.com>

	* panel_config.c: prevent infinite loop with background pixmap
	  setting, but this needs more work

	* basep-widget.c: follow style_set signal and reset styles on the
	  subwidgets to follow theme

	* panel.c: make sure button #3 gets through on panels, so that menu
	  gets displayed

Thu Jan 25 04:10:03 2001  George Lebl <jirka@5z.com>

	* panel.c: 1st button click on  the panel space also starts a panel
	  drag

Thu Jan 25 03:01:19 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch], drawer.c: added the level to all other panel
	  and drawer configurations

Wed Jan 24 00:31:52 2001  George Lebl <jirka@5z.com>

	* global-keys.c: actually make this work, apperently we don't get
	  things out of events now in filters, we must use the raw xevents

Sat Jan 06 18:18:57 2001  George Lebl <jirka@5z.com>

	* extern.c: some cleanups, recycle the exception when fail to
	  add_applet on a booter

	* foobar-widget.c, basep-widget.c:  queue_resize after a realize
	  so that if the WM misplaces us we will replace ourselves back.

Tue Jan 02 20:44:47 2001  George Lebl <jirka@5z.com>

	* extern.c:  Implement launch_an_applet.  It's very simple really,
	  activate the applet, and then if we get an applet with such a
	  goad_id, use the PanelAppletBooter interface to bootstrap it, and
	  leave the rest to whatever wanted the applet in the first place.

	* button-widget.c: fix warning 
