@@ -1,3 +1,7 @@
+Sat Feb 03 19:39:40 2001  Julian Missig <julian@jabber.org>
+
+	* status.c: Status Dock now fits in a 'tiny' sized panel.
+
 Thu Feb 01 20:10:55 2001  George Lebl <jirka@5z.com>
 
 	* panel_config.c:  How did this ever build for me before, fix
